--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -1,36 +1,46 @@
+.date_now {
+    background-color: black;
+    color: white;
+    padding: 5px;
+    font-size: 14px;
+}
+
 .navbar {
-    display: flex;
-    background: #2d2b34;
+    background-color: rgba(0, 0, 0, 0.829);
     color: #fdfdfd;
-    border-radius: 0px 0px 0px 30px;      
+    padding: 20px;      
 }
 
 .navbar_section {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .navbar_logo {
-    font-size: 35px;
+    font-size: 45px;
     padding: 10px 30px;
-    background-color: #212027;
     border-radius: 0px 40px 0px 30px;
-    text-shadow: 0px 1px 8px #ffd700;
-    box-shadow: 0px -2px 7px #6afb61;
+    text-shadow: 0px 1px 8px rgb(0 173 255);
     background-image: url('../../img/soccer-ball.png');
     background-position: 0px 0;
     background-repeat: no-repeat;
     background-size: auto 100%;
 }
 
+.navbar_logo a {
+    text-decoration: none;
+    color: white
+}
+
+.navbar_items {
+    display: flex;
+}
+
 .navbar_item {
-    box-shadow: 0px 1px 5px #6afb61;
-    border-radius: 30px;
     padding: 4px 15px;
-    font-size: 20px;
-    margin-left: 25px;
-    text-shadow: rgb(255, 255, 255) 1px 0 5px;
-        
+    font-size: 22px;
+    margin-left: 20px;    
 }
 
 .navbar_item a {
@@ -38,9 +48,7 @@
     text-decoration: none;
 }
 .navbar_item:hover {
-    background-color: #32303a;
-    box-shadow: 0px 3px 5px #1a7009;
-
+    text-shadow: 1px 1px 10px rgb(0 173 255);
 }
 
 .navbar_item:active {
