--- a/src/components/UI/my-input/MyInput.module.css
+++ b/src/components/UI/my-input/MyInput.module.css
@@ -2,7 +2,7 @@
     min-width: 320px;
     padding: 7px 15px;
     font-size: 14px;
-    margin: 15px 10px;
+    margin: 20px 0;
     border-radius: 20px;
     background-color: #2d2b34;
     color: white
