--- a/src/components/сreate-list-league/CreateListLeague.css
+++ b/src/components/сreate-list-league/CreateListLeague.css
@@ -9,20 +9,23 @@
     display: flex;
     flex-direction: column;    
     text-align: center;
-    margin-bottom: 20px;    
+    margin-bottom: 40px;
+    border: 1px solid  rgb(194 194 194);
+    border-radius: 15px;   
 }
 
 .list__item_name {
     background-color: black;
-    padding: 10px;
+    padding: 15px;
     color: white;
-    border-radius: 15px 15px 0px 0px
+    border-radius: 15px 15px 0px 0px;
+    text-shadow: 0px 0px 10px rgb(0 173 255); 
 }
 
 .list__item_dates {
-    background-color: rgb(116, 114, 114);
     padding: 10px;
-    color: white;  
+    color: rgb(0, 0, 0);
+    text-shadow: 0px 0px 10px rgb(0 173 255);  
 }
 
 .list__item_btns {
