--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,21 @@ html, body, #root, .App {
     display: flex;
     min-height: 100%;
     flex-direction: column;
+    background-image: url('./img/bg-img6.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    Background-attachment: fixed;
 }
 
+.main {
+    height: 100%;
+    padding-top: 130px;
+}
 .container {
     max-width: 1140px;
     margin: 0 auto;
+    padding: 0px 15px;
 }
 .main {
     flex: 1 1 auto
