--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ html, body, #root, .App {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
 }
+h1 {
+    color: white;
+    text-shadow: 3px 3px 5px black;
+}
 
 .wrapper {
     height: 100%;
