--- a/src/components/UI/filter-dates/FilterDates.css
+++ b/src/components/UI/filter-dates/FilterDates.css
@@ -41,7 +41,7 @@
     background-color: white;
     color: #2c2c2c;
     width: 100px;
-    padding: 10px;
+    padding: 9px;
     border-radius: 10px;
     text-transform: uppercase;
     font-weight: bold;
@@ -52,4 +52,22 @@
 .filter_btn:hover {
     color: rgb(0 173 255);
     background-color: #2c2c2c;
+}
+
+@media screen and (max-width: 640px) {
+    .filter_date__start {
+        padding: 7px;  
+        margin: 0px;
+        width: 45%;      
+    }
+    .filter_date__end {
+        padding: 5px;  
+        margin: 0px;
+        width: 45%;      
+    }
+    .filter_btn {
+        padding: 7px;
+        margin-top: 10px;
+        width: 98%;
+    }
 }
