--- a/src/components/UI/my-list/MyList.module.css
+++ b/src/components/UI/my-list/MyList.module.css
@@ -19,7 +19,7 @@
 
 ._list a:hover {
     background: #494653;
-    text-shadow: 0px 1px 10px #6afb61;
+    text-shadow: 0px 1px 10px rgb(0 173 255);
 }
 
 ._list a:hover:before {
