--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -75,17 +75,21 @@
 }
 
 @media screen and (max-width: 640px) {
+    .main {
+        padding-top: 100px;
+    }
     .date_now {
         font-size: 9px;
         padding: 5px;
     }
     .navbar_section {
-        padding: 10px;        
+        padding: 10px; 
+        justify-content: space-between;       
     }
     .navbar_logo {
         font-size: 25px;
     }
-    .navbar_item {
+    .navbar_items {
         display: none;
     }    
     .navbar__burger {
@@ -93,15 +97,26 @@
         position: relative;
         width: 30px;
         height: 20px;
+        cursor: pointer;
     }
     .navbar__burger::before,
     .navbar__burger::after {
         content: '';
+        background-color: #fff;
         position: absolute;
         width: 100%;
         height: 2px;
         left: 0;
     }
+    .navbar__burger span {
+        position: absolute;
+        background-color: #fff;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        top: 9px;
+    }
+
     .navbar__burger::before{
         top: 0;
     }
