--- a/src/components/сreate-list-league/CreateListLeague.css
+++ b/src/components/сreate-list-league/CreateListLeague.css
@@ -6,7 +6,7 @@
 
 .list__item {
     background-color: white;
-    width: 250px;
+    width: 260px;
     display: flex;
     flex-direction: column;    
     text-align: center;
@@ -24,6 +24,7 @@
     background-color: black;
     padding: 15px;
     color: white;
+    font-weight: bold;
     border-radius: 15px 15px 0px 0px;
     text-shadow: 0px 0px 10px rgb(0 173 255); 
 }
