--- a/src/components/fetch-error/FetchError.css
+++ b/src/components/fetch-error/FetchError.css
@@ -7,8 +7,10 @@
 }
 
 .fetch_error p {
+    color: white;
     text-align: center;
     font-size: 30px;
     text-shadow: 0px 0px 50px rgb(0 173 255);
+    text-shadow: 2px 2px 5px black;
 
 }
