--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,19 +1,50 @@
-.homepage_content {
+.homepage_wrap{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.homepage_text {
     text-align: center;
-    font-size: 18vh;
+    font-size: 16vh;
     font-weight: 900;
     color: white;
     text-shadow: 3px 3px 10px black
 }
 
+.home_btn {
+   margin-top: 20px;
+   font-size: 4vh;
+   padding: 20px 70px;
+   font-weight: bold;
+   border-radius: 40px;  
+   cursor: pointer;
+   background-color: #ffffff;
+   border: none;
+   color: rgb(0, 0, 0);
+   transition-duration: 0.3s;
+}
+
+.home_btn:hover {
+    background-color: #2c2c2c;
+    color: rgb(0 173 255);
+ }
+
 @media screen and (max-width: 1140px) {
-    .homepage_content {
+    .homepage_text {
         font-size: 12vh;
+    }
+    .home_btn {
+        font-size: 3vh;
+        padding: 18px 55px;
     }
 }
 
 @media screen and (max-width: 756px) {
-    .homepage_content {
+    .homepage_text {
         font-size: 7vh;
+    }
+    .home_btn {
+        font-size: 2vh;
+        padding: 13px 45px;
     }
 }
